objects/GlobalAccountsCleanup__c.object
<CustomObject>
    <fields>
        <fullName>AccountId__c</fullName>
        <label>AccountId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerId__c</fullName>
        <label>OwnerId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerName__c</fullName>
        <label>OwnerName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
</CustomObject>